# Pfadfinder

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile_de.in  Doxyfile_en.in  LICENSE.md  LIESMICH.md  LIZENZ.md  README.md  config.hpp.in  out.json
.github/workflows/: cmake.yml  docs.yml
build_final_check/: CTestTestfile.cmake
build_final_check/tests/: CTestTestfile.cmake  test_pfadfinder
build_internal/: CTestTestfile.cmake
build_internal/tests/: CTestTestfile.cmake
docs/: error.cppm.dox  filter_comments.cpp  header.html  linux_backend.cppm.dox  macos_backend.cppm.dox  pfadfinder.cppm.dox  system_environment.cppm.dox  windows_backend.cppm.dox
src/: error.cppm  linux_backend.cppm  linux_environment.cppm  macos_backend.cppm  macos_environment.cppm  pfadfinder.cppm  system_backend_linux.cppm  system_backend_macos.cppm  system_backend_windows.cppm  system_environment.cppm  windows_backend.cppm  windows_environment.cppm
tests/: CMakeLists.txt  test_pfadfinder.cpp
